--- a/index.html
+++ b/index.html
@@ -80,105 +80,7 @@
   <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
   <!-- Obfuscated JavaScript to dynamically set the stream URL -->
   <script>
-    var _$_f04a = [
-      "\x74\x65\x78\x74\x43\x6F\x6E\x74\x65\x6E\x74",     // "textContent"
-      "\x63\x68\x61\x6E\x6E\x65\x6C\x4E\x61\x6D\x65",         // "channelName"
-      "\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64", // "getElementById"
-      "\x49\x50\x4C\x20\x32\x30\x32\x35\x20\x4C\x69\x76\x65\x20\x53\x74\x72\x65\x61\x6D", // "IPL 2025 Live Stream"
-      "\x73\x72\x63",                                       // "src"
-      "\x73\x74\x72\x65\x61\x6D\x53\x6F\x75\x72\x63\x65",   // "streamSource"
-      "\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x6D\x73\x2E\x73\x61\x6E\x64\x62\x72\x69\x78\x2E\x6C\x69\x76\x65\x2F\x4C\x69\x76\x65\x41\x70\x70\x2F\x73\x74\x72\x65\x61\x6D\x73\x2F\x76\x43\x31\x39\x67\x5A\x61\x70\x69\x71\x52\x56\x43\x32\x72\x79\x33\x35\x34\x36\x37\x32\x37\x35\x39\x33\x34\x31\x37\x32\x2E\x6D\x33\x75\x38", // The hidden URL
-      "\x76\x69\x64\x65\x6F\x50\x6C\x61\x79\x65\x72",     // "videoPlayer"
-      "\x70\x6C\x61\x79",                                   // "play"
-      "\x72\x65\x61\x64\x79",                               // "ready"
-      "\x63\x6F\x6E\x74\x65\x78\x74\x6D\x65\x6E\x75",       // "contextmenu"
-      "\x70\x72\x65\x76\x65\x6E\x74\x44\x65\x66\x61\x75\x6C\x74", // "preventDefault"
-      "\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72", // "addEventListener"
-      "\x6B\x65\x79\x64\x6F\x77\x6E",                       // "keydown"
-      "\x63\x74\x72\x6C\x4B\x65\x79",                       // "ctrlKey"
-      "\x6B\x65\x79",                                       // "key"
-      "\x75",                                               // "u"
-      "\x73",                                               // "s"
-      "\x61",                                               // "a"
-      "\x70",                                               // "p"
-      "\x46\x31\x32",                                       // "F12"
-      "\x73\x68\x69\x66\x74\x4B\x65\x79",                   // "shiftKey"
-      "\x49",                                               // "I"
-      "\x4A",                                               // "J"
-      "\x43"                                                // "C"
-    ];
-
-    // Set channel name text
-    document[_$_f04a[2]](_$_f04a[1]).textContent = _$_f04a[3];
-    // Dynamically assign the stream URL to the video source element
-    document[_$_f04a[2]](_$_f04a[5])[_$_f04a[4]] = _$_f04a[6];
-
-    var player = videojs(_$_f04a[7]);
-    player[_$_f04a[9]](function(){
-      player[_$_f04a[8]]();
-    });
-
-    // Disable right-click context menu and key combos
-    document[_$_f04a[12]](_$_f04a[10], function(e) {
-      e[_$_f04a[11]]();
-    });
-    document[_$_f04a[12]](_$_f04a[13], function(e) {
-      if(e[_$_f04a[14]] && (
-         e[_$_f04a[15]] === _$_f04a[16] ||
-         e[_$_f04a[15]] === _$_f04a[17] ||
-         e[_$_f04a[15]] === _$_f04a[18] ||
-         e[_$_f04a[15]] === _$_f04a[19]
-       ) || e[_$_f04a[15]] === _$_f04a[20] ||
-       (e[_$_f04a[14]] && e[_$_f04a[21]] && (
-         e[_$_f04a[15]] === _$_f04a[22] ||
-         e[_$_f04a[15]] === _$_f04a[23] ||
-         e[_$_f04a[15]] === _$_f04a[24]
-       ))) {
-        e[_$_f04a[11]]();
-      }
-    });
-
-    // Dynamic glowing effect
-    const video = document.getElementById('videoPlayer');
-    const container = document.getElementById('videoContainer');
-    const canvas = document.createElement('canvas');
-    const ctx = canvas.getContext('2d');
-
-    function extractDominantColor() {
-      canvas.width = video.videoWidth / 10; // Reduce resolution for performance
-      canvas.height = video.videoHeight / 10;
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      const frameData = ctx.getImageData(0, 0, canvas.width, canvas.height).data;
-
-      let r = 0, g = 0, b = 0, count = 0;
-
-      for (let i = 0; i < frameData.length; i += 4) {
-        r += frameData[i];
-        g += frameData[i + 1];
-        b += frameData[i + 2];
-        count++;
-      }
-
-      r = Math.floor(r / count);
-      g = Math.floor(g / count);
-      b = Math.floor(b / count);
-
-      return `rgb(${r}, ${g}, ${b})`;
-    }
-
-    function updateGlow() {
-      if (!video.paused && !video.ended) {
-        const color = extractDominantColor();
-        container.style.boxShadow = `0 10px 30px ${color}`;
-        container.style.setProperty('--glow-color', color);
-        container.querySelector('::before').style.background = `radial-gradient(circle, ${color}, transparent)`;
-      }
-      requestAnimationFrame(updateGlow);
-    }
-
-    video.addEventListener('play', () => {
-      requestAnimationFrame(updateGlow);
-    });
+    function _0x35bd(){var _0x4d6752=['11848RPDAJN','981ZozazF','keydown','447110YaIfFS','videoPlayer','getElementById','F12','674568VmXEOS','streamSource','textContent','key','addEventListener','8729620weVcuZ','13489ZoDnNP','6040bkTdHO','play','3182908UxjkZa','ctrlKey','ready','10418526dgXeHo','shiftKey','https://amssandbrix.b-cdn.net/LiveApp/streams/NKAv2V2BTnEuVJdS170390248731.m3u8','channelName'];_0x35bd=function(){return _0x4d6752;};return _0x35bd();}var _0x3ae120=_0x6c3b;(function(_0x143481,_0x165863){var _0x107010=_0x6c3b,_0x4f2083=_0x143481();while(!![]){try{var _0x24089a=-parseInt(_0x107010(0x156))/0x1+-parseInt(_0x107010(0x14c))/0x2+parseInt(_0x107010(0x154))/0x3*(parseInt(_0x107010(0x153))/0x4)+parseInt(_0x107010(0x148))/0x5+parseInt(_0x107010(0x14f))/0x6+-parseInt(_0x107010(0x149))/0x7*(parseInt(_0x107010(0x14a))/0x8)+-parseInt(_0x107010(0x143))/0x9;if(_0x24089a===_0x165863)break;else _0x4f2083['push'](_0x4f2083['shift']());}catch(_0x5b6f91){_0x4f2083['push'](_0x4f2083['shift']());}}}(_0x35bd,0xd7756),document[_0x3ae120(0x141)](_0x3ae120(0x152))[_0x3ae120(0x145)]='IPL\x202025\x20Live\x20Stream',document[_0x3ae120(0x141)](_0x3ae120(0x144))['src']=_0x3ae120(0x151));var player=videojs(_0x3ae120(0x157));function _0x6c3b(_0x341589,_0x3625fd){var _0x35bd49=_0x35bd();return _0x6c3b=function(_0x6c3b36,_0x19207a){_0x6c3b36=_0x6c3b36-0x141;var _0x3f4a0e=_0x35bd49[_0x6c3b36];return _0x3f4a0e;},_0x6c3b(_0x341589,_0x3625fd);}player[_0x3ae120(0x14e)](function(){var _0x4b015f=_0x3ae120;player[_0x4b015f(0x14b)]();}),document[_0x3ae120(0x147)]('contextmenu',function(_0x8c3e50){_0x8c3e50['preventDefault']();}),document[_0x3ae120(0x147)](_0x3ae120(0x155),function(_0x193703){var _0x126b69=_0x3ae120;(_0x193703[_0x126b69(0x14d)]&&(_0x193703['key']==='u'||_0x193703[_0x126b69(0x146)]==='s'||_0x193703['key']==='a'||_0x193703[_0x126b69(0x146)]==='p')||_0x193703[_0x126b69(0x146)]===_0x126b69(0x142)||_0x193703['ctrlKey']&&_0x193703[_0x126b69(0x150)]&&(_0x193703[_0x126b69(0x146)]==='I'||_0x193703[_0x126b69(0x146)]==='J'||_0x193703[_0x126b69(0x146)]==='C'))&&_0x193703['preventDefault']();});
   </script>
   <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
 </body>
